force-app/main/default/objects/Analysis_Acc_Master__c/Analysis_Acc_Master__c.object-meta.xml
<CustomObject>
    <label>Analysis Acc Master</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Analysis Acc Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>