force-app/main/default/objects/Analysis_Acc_Master__c/fields/Account_User_Count__c.field-meta.xml
<CustomField>
    <fullName>Account_User_Count__c</fullName>
    <label>Account User Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>