force-app/main/default/objects/Analysis_Acc_Master__c/fields/Active_Account__c.field-meta.xml
<CustomField>
    <fullName>Active_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Account</label>
    <type>Checkbox</type>
</CustomField>