force-app/main/default/objects/Analysis_Acc_Master__c/fields/Billing_Account1__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account1__c</fullName>
    <label>Billing Account1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>