force-app/main/default/objects/Analysis_Acc_Master__c/fields/Case_HOSP_Count__c.field-meta.xml
<CustomField>
    <fullName>Case_HOSP_Count__c</fullName>
    <label>Case  - HOSP Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>