force-app/main/default/objects/Analysis_Acc_Master__c/fields/CFS_Contract_Count__c.field-meta.xml
<CustomField>
    <fullName>CFS_Contract_Count__c</fullName>
    <label>CFS Contract Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>