force-app/main/default/objects/Analysis_Acc_Master__c/fields/CheckAddress__c.field-meta.xml
<CustomField>
    <fullName>CheckAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CheckAddress</label>
    <type>Checkbox</type>
</CustomField>