force-app/main/default/objects/Analysis_Acc_Master__c/fields/Credit_Detail_Count__c.field-meta.xml
<CustomField>
    <fullName>Credit_Detail_Count__c</fullName>
    <label>Credit Detail Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>