force-app/main/default/objects/Analysis_Acc_Master__c/fields/Customer_Temp_Count__c.field-meta.xml
<CustomField>
    <fullName>Customer_Temp_Count__c</fullName>
    <label>Customer Temp Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>