force-app/main/default/objects/Analysis_Acc_Master__c/fields/Esign_Agreement_Count__c.field-meta.xml
<CustomField>
    <fullName>Esign_Agreement_Count__c</fullName>
    <label>Esign Agreement Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>