force-app/main/default/objects/Analysis_Acc_Master__c/fields/Esign_Recipient_Count__c.field-meta.xml
<CustomField>
    <fullName>Esign_Recipient_Count__c</fullName>
    <label>Esign Recipient Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>