force-app/main/default/objects/Analysis_Acc_Master__c/fields/Input_Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Input_Account_Record_Type__c</fullName>
    <label>Input Account Record Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>