force-app/main/default/objects/Analysis_Acc_Master__c/fields/Input_CDMPuprose__c.field-meta.xml
<CustomField>
    <fullName>Input_CDMPuprose__c</fullName>
    <label>Input CDM Puprose</label>
    <length>20</length>
    <type>Text</type>
</CustomField>