force-app/main/default/objects/Analysis_Acc_Master__c/fields/Input_Master_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Input_Master_Customer_Number__c</fullName>
    <externalId>true</externalId>
    <label>Input Master Customer Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>