force-app/main/default/objects/Analysis_Acc_Master__c/fields/Input_Party_Name__c.field-meta.xml
<CustomField>
    <fullName>Input_Party_Name__c</fullName>
    <label>Input Party Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>