force-app/main/default/objects/Analysis_Acc_Master__c/fields/Need_Help_Account2_Count__c.field-meta.xml
<CustomField>
    <fullName>Need_Help_Account2_Count__c</fullName>
    <label>Need Help Account2 Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>