force-app/main/default/objects/Analysis_Acc_Master__c/fields/No_of_ParentId_Childs__c.field-meta.xml
<CustomField>
    <fullName>No_of_ParentId_Childs__c</fullName>
    <label>No of ParentId Childs</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>