force-app/main/default/objects/Analysis_Acc_Master__c/fields/Open_Event_Count__c.field-meta.xml
<CustomField>
    <fullName>Open_Event_Count__c</fullName>
    <label>Open Event Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>