force-app/main/default/objects/Analysis_Acc_Master__c/fields/Pramata_Contract_Count__c.field-meta.xml
<CustomField>
    <fullName>Pramata_Contract_Count__c</fullName>
    <label>Pramata Contract Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>