force-app/main/default/objects/Analysis_Acc_Master__c/fields/Primary_Partner_Child_Account_Count__c.field-meta.xml
<CustomField>
    <fullName>Primary_Partner_Child_Account_Count__c</fullName>
    <label>Primary Partner Child Account Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>