force-app/main/default/objects/Analysis_Acc_Master__c/fields/PRM_Comments__c.field-meta.xml
<CustomField>
    <fullName>PRM_Comments__c</fullName>
    <label>PRM Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>