force-app/main/default/objects/Analysis_Acc_Master__c/fields/PRM_Incentive_Program_Exception_Count__c.field-meta.xml
<CustomField>
    <fullName>PRM_Incentive_Program_Exception_Count__c</fullName>
    <label>PRM Incentive Program Exception Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>