force-app/main/default/objects/Analysis_Acc_Master__c/fields/PRM_Services_Count__c.field-meta.xml
<CustomField>
    <fullName>PRM_Services_Count__c</fullName>
    <label>PRM Services Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>