force-app/main/default/objects/Analysis_Acc_Master__c/fields/PRM_SFDC_Budget_Count__c.field-meta.xml
<CustomField>
    <fullName>PRM_SFDC_Budget_Count__c</fullName>
    <label>PRM SFDC Budget Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>