force-app/main/default/objects/Analysis_Acc_Master__c/fields/Quby_Quote_Count__c.field-meta.xml
<CustomField>
    <fullName>Quby_Quote_Count__c</fullName>
    <label>Quby Quote Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>