force-app/main/default/objects/Analysis_Acc_Master__c/fields/Solution_Provider_Relationship_Count__c.field-meta.xml
<CustomField>
    <fullName>Solution_Provider_Relationship_Count__c</fullName>
    <label>Solution Provider Relationship Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>