force-app/main/default/objects/Analysis_Acc_Master__c/fields/UAT_Description__c.field-meta.xml
<CustomField>
    <fullName>UAT_Description__c</fullName>
    <label>UAT Description</label>
    <type>TextArea</type>
</CustomField>