force-app/main/default/objects/Analysis_Acc_Master__c/fields/ZQuote_Count__c.field-meta.xml
<CustomField>
    <fullName>ZQuote_Count__c</fullName>
    <label>ZQuote Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>