force-app/main/default/objects/Analysis_Acc_Master__c/fields/Zuora_Objects_Comments__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Objects_Comments__c</fullName>
    <label>Zuora Objects Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>